--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -37,7 +37,7 @@ jobs:
               with:
                 node-version: '20'
             - run: npm ci
-            - run: npm run test -- --watchAll=false
+            - run: npm run test
 
             - name: Upload coverage
               uses: actions/upload-artifact@v4
