--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"(placeholder) no tests defined yet\" && exit 0",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
