--- a/backend/sonar-project.properties
+++ b/backend/sonar-project.properties
@@ -4,10 +4,13 @@ sonar.projectName=api devops_final_pj
 sonar.projectVersion=1.0
 
 # Ruta al código fuente
-sonar.sources=src
+sonar.sources=.
 
 # Lenguaje
 sonar.language=js
+
+# Ignorar tests, node_modules, build, etc.
+sonar.exclusions=**/__tests__/**,**/*.test.js,**/node_modules/**,**/dist/**,**/build/**
 
 # Encoding del archivo fuente
 sonar.sourceEncoding=UTF-8
