--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "test": "jest --coverage",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "sonar": "sonar-scanner"
+    "sonar": "sonar-scanner",
+    "start": "src/index.js"
   },
   "keywords": [],
   "author": "",
